--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,8 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "commonjs",
-    "target": "es2020",
+    "module": "ES2022",
+    "target": "ES2022",
+    "moduleResolution": "bundler",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -41,6 +42,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
 
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
